# akgentic-team

./: .env.example  README.md  USAGE-GUIDE.md  pyproject.toml
.github/workflows/: ci.yml
examples/: 01-team-definition.md  01_team_definition.py  02-team-factory.md  02_team_factory.py  03-team-manager-lifecycle.md  03_team_manager_lifecycle.py  04-event-sourcing.md  04_event_sourcing.py  05-crash-recovery.md  05_crash_recovery.py  06-mongo-backend.md  06_mongo_backend.py  README.md
src/akgentic/team/: __init__.py  factory.py  manager.py  models.py  orchestrator_stop_subscriber.py  ports.py  restorer.py  subscriber.py
src/akgentic/team/cli/: README.md  __init__.py  _output.py  main.py
src/akgentic/team/repositories/: __init__.py  mongo.py  yaml.py
src/akgentic/team/repositories/postgres/: __init__.py  _queries.py  event_store.py  schema.toml
src/akgentic/team/scripts/: __init__.py  init_db.py
tests/: __init__.py  conftest.py  test_public_api.py
tests/cli/: __init__.py  conftest.py  test_main.py
tests/integration/: __init__.py  conftest.py  test_factory.py  test_lifecycle.py  test_llm_lifecycle.py  test_persistence.py  test_process_human_input.py
tests/models/: __init__.py  conftest.py  test_ports.py  test_process.py  test_team_card.py  test_team_runtime.py
tests/repositories/: __init__.py  conftest.py  test_event_store_contract.py  test_yaml.py
tests/repositories/mongo/: __init__.py  conftest.py  test_mongo.py
tests/repositories/postgres/: conftest.py  test_ci_env_wiring.py  test_event_store.py  test_import_gate.py  test_init_db.py  test_init_db_script_smoke.py  test_schema_file.py  test_wheel_packaging.py
tests/scripts/: test_init_db_script.py
tests/services/: __init__.py  conftest.py  test_factory.py  test_manager.py  test_orchestrator_stop_subscriber.py  test_restorer.py  test_subscriber.py  test_timer_stop_subscriber.py
