[project]
name = "akgentic-<module>"
version = "0.1.0"
description = "Short description of your module"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "your-name", email = "your-mail-address" }
]
keywords = ["agents", "ai", "akgentic"]

dependencies = [
    "pydantic>=2.0.0",
    # Add module-specific dependencies here
    # Examples:
    # "akgentic",           # If you need core actor framework
    # "akgentic-llm",       # If you need LLM integration
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Uncomment and configure if your module depends on workspace packages
# [tool.uv.sources]
# akgentic = { workspace = true }
# akgentic-llm = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/akgentic"]

# Tool configurations inherit from root workspace pyproject.toml
# Only override when package-specific behavior is needed

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []
